internal/controller/testdata/domain/primary-gateway-cert-manager.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    sme.sap.com/owner-identifier: Domain.default.test-cap-01-primary
    sme.sap.com/resource-hash: c855fdbb0dca23b24ce0ebc538c83323b7b71b2603e409996b30bea5204976f9
  labels:
    sme.sap.com/owner-generation: "0"
    sme.sap.com/owner-identifier-hash: f3b9e769089130d9d80dc05b68fb1564beb8cccc
  name: test-cap-01-primary-gen
  namespace: default
  ownerReferences:
  - apiVersion: sme.sap.com/v1alpha2
    blockOwnerDeletion: true
    controller: true
    kind: Domain
    name: test-cap-01-primary
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - ./*.app-domain.test.local
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: default--test-cap-01-primary-cert-manager
      mode: SIMPLE
